<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.qubership.atp.auth</groupId>
        <artifactId>atp-auth-spring-boot-starter</artifactId>
        <version>2.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>atp-auth-models</artifactId>
    <name>atp-auth-models</name>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>
